applications/CodeServer/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
  labels:
    app: code-server
spec:
  ports:
    - port: 8443
      targetPort: webui
      protocol: TCP
  selector:
    app: code-server
  sessionAffinity: None
  type: LoadBalancer
